# ppx_deriving_brr

./: .ocamlformat  Makefile  dune-project  ppx_deriving_brr.opam  readme.md
example/: dune  example.ml
ppx/: dune  ppx_deriving_brr.ml
test/: dune  pp.expected  run.expected  test.ml
test/pp/: dune
