(lang dune 3.0)

(name ppx_deriving_brr)
(generate_opam_files true)

(source
 (github dariusf/ppx_deriving_brr))

(authors "Darius Foo")

(maintainers "darius.foo.tw@gmail.com")

(package
 (name ppx_deriving_brr)
 (synopsis "Deriver for easy OCaml-JS interop with brr")
 (description "Derives conversion functions and a module interface"))
